Fri Mar  6 10:31:00 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (vm_call_super): search next super class from the
	  original class, to get rid of infinite recursion with
	  prepending.  a patch by Seiei Higa <hanachin AT gmail.com> at
	  [ruby-core:68434].  [ruby-core:68093] [Bug #10847]

Fri Mar  6 08:45:26 2015  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Add Vector#round. Patch by Jordan Stephens.
	  [Fixes GH-802]

Fri Mar  6 07:33:03 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (obj_info): show node name too.

Fri Mar  6 07:00:44 2015  Koichi Sasada  <ko1@atdot.net>

	* internal.h: remove struct method_table_wrapper.
	  struct method_table_wrapper was introduced to avoid duplicate marking
	  for method tables.

	  For example, `module M1; def foo; end; end` make one method table
	  (mtbl) contains a method `foo`. M1 (T_MODULE) points mtbl.
	  Classes C1 and C2 includes M1, then two T_ICLASS objects are created
	  and they points mtbl too. In this case, three objects (one T_MODULE
	  and two T_ICLASS objects) points same mtbl. On marking phase, these
	  three objects mark same mtbl. To avoid such duplication, struct
	  method_table_wrapper was introduced.

	  However, created two T_ICLASS objects have same or shorter lifetime
	  than M1 (T_MODULE) object. So that we only need to mark mtbl from M1,
	  not from T_ICLASS objects. This patch tries marking only from M1.
	  In other words, original module (M1) has responsibility to mark mtbl.
	  Because of no duplicate marking, we don't need method_table_wrapper
	  any more.

	  Note that one `Module#prepend` call creates two T_ICLASS objects.
	  One for refering to a prepending Module object, same as
	  `Module#include`. We don't nedd to care this T_ICLASS.
	  One for moving original mtbl from a prepending class. We need to
	  mark such mtbl from this T_ICLASS object. To mark the mtbl,
	  we need to use `RCLASS_ORIGIN(klass)` on marking from a prepended
	  class `klass`.
