@@ -1,3 +1,10 @@
+Fri Mar  6 17:31:29 2015  Koichi Sasada  <ko1@atdot.net>
+
+	* test/ruby/test_beginendblock.rb: do not change directory.
+
+	  Run system command in the directory mounted by vboxfs on Windows 7
+	  and get warning like that "warning: Insecure world writable dir...".
+
 Fri Mar  6 10:31:00 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* vm_eval.c (vm_call_super): search next super class from the
